--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
 <body>
   <div class="parent">
     <div class="child container d-grid animate__animated animate__fadeIn animate__slow">
-        <div class="row align-items-start">
-            <div class="col">
-                <img class="logo" src="./images/yo.jpeg">
-            </div>
-            <div class="col">
-                <div class="row"><h2 class="lightGreyGeo">Víctor Manuel Nevárez Herrera</h2></div>
-                <div class="row"><h3 class="lightGreyGeo">Ingeniería de Software y Sistemas Computacionales</h3></div>
-                <div class="row"><h3 class="lightGreyGeo">70759</h3></div>
-            </div>
+        
+        <div class="row justify-content-md-center">
+            <img class="logo" src="./images/yo.jpeg">
         </div>
+        <div class="row justify-content-md-center">
+            <div class="row"><h2 class="lightGreyGeo">Víctor Manuel Nevárez Herrera</h2></div>
+            <div class="row"><h4 class="lightGreyGeo">Ingeniería de Software y Sistemas Computacionales</h4></div>
+            <div class="row"><h4 class="lightGreyGeo">70759</h4></div>
+        </div>
+        
 
-        <button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/1st.html';">1er Periodo</button>
-        <button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/2nd.html';">2do Periodo</button>
-        <button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/3rd.html';">3er Periodo</button>
+        <div class="row justify-content-md-center">
+            <div class="col"></div>
+            <div class="col-6">
+                <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/1st.html';">1er Periodo</button></div>
+                <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/2nd.html';">2do Periodo</button></div>
+                <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/3rd.html';">3er Periodo</button></div>
+            </div>
+            <div class="col"></div>
+        </div>
     </div>
   </div>
 
