--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img class="logo" src="./images/yo.jpeg">
         </div>
         <div class="row justify-content-md-center">
-            <div class="row"><h2 class="lightGreyGeo">Víctor Manuel Nevárez Herrera</h2></div>
-            <div class="row"><h4 class="lightGreyGeo">Ingeniería de Software y Sistemas Computacionales</h4></div>
-            <div class="row"><h4 class="lightGreyGeo">70759</h4></div>
+            <div class="row"><h2 class="lightGreyGeo hTextAlignment">Víctor Manuel Nevárez Herrera</h2></div>
+            <div class="row"><h4 class="lightGreyGeo hTextAlignment">Ingeniería de Software y Sistemas Computacionales</h4></div>
+            <div class="row"><h4 class="lightGreyGeo hTextAlignment">70759</h4></div>
         </div>
         
 
