--- a/pages/1st.html
+++ b/pages/1st.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ciudadanía y Responsabilidad Social</title>
+  <title>1er Periodo</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="./style.css" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,17 +17,15 @@
     <div class="child container d-grid animate__animated animate__fadeIn animate__slow">
         
         <div class="row justify-content-md-center">
-            <div class="row"><h2 class="lightGreyGeo">1er Periodo</h2></div>
+          <h2 class="lightGreyGeo">1er Periodo</h2>
         </div> 
 
         <div class="row justify-content-md-center">
-            <div class="col"></div>
-            <div class="col-6">
-                <div class="row"><button class="buttonCenter"><a href="google.com" download="Tarea1">Download</a></button></div>
-                <div class="row"><button class="buttonCenter">2do Periodo</button></div>
-                <div class="row"><button class="buttonCenter">3er Periodo</button></div>
-            </div>
-            <div class="col"></div>
+          <div class="col-6">
+            <div class="row"><button class="buttonCenter buttonWidth" onclick="window.location.href='https://slp-statics.astockcdn.net/static_assets/staging/22spring/homepage/featured-contributors/card-5.jpg?width=580';">Tarea 1</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/2nd.html';">Tarea 2</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/3rd.html';">Tarea 3</button></div>
+          </div>
         </div>
     </div>
   </div>
