Changes 1st period CRS

--- a/pages/1st.html
+++ b/pages/1st.html
@@ -22,9 +22,8 @@
 
         <div class="row justify-content-md-center">
           <div class="col-6">
-            <div class="row"><button class="buttonCenter buttonWidth" onclick="window.location.href='https://slp-statics.astockcdn.net/static_assets/staging/22spring/homepage/featured-contributors/card-5.jpg?width=580';">Tarea 1</button></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/2nd.html';">Tarea 2</button></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/3rd.html';">Tarea 3</button></div>
+            <div class="row"><button class="buttonCenter buttonWidth" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/1st/Ciudadania.pdf';">Tarea 1</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/1st/Perspectiva-de-Genero.pdf';">Tarea 2</button></div>
           </div>
         </div>
     </div>
