Third period changes

--- a/pages/3rd.html
+++ b/pages/3rd.html
@@ -22,9 +22,12 @@
 
         <div class="row justify-content-md-center">
           <div class="col-6">
-            <div class="row"><button class="buttonCenter buttonWidth" onclick="window.location.href='https://slp-statics.astockcdn.net/static_assets/staging/22spring/homepage/featured-contributors/card-5.jpg?width=580';">Tarea 1</button></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/2nd.html';">Tarea 2</button></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/pages/3rd.html';">Tarea 3</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/reflexion.pdf';">Tarea 1</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/mapa.pdf';">Tarea 2</button></div>
+            <div class="row"><a href="https://padlet.com/antonio_moralesca/9skac4fy96r17vrm"><button class="buttonCenter">Tarea 3</button></a></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_principios.pdf';">Tarea 4</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_caracteristicas.pdf';">Tarea 5</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuestionario.pdf';">Tarea 6</button></div>
           </div>
         </div>
     </div>
