Third period fix

--- a/pages/3rd.html
+++ b/pages/3rd.html
@@ -25,8 +25,8 @@
             <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/reflexion.pdf';">Tarea 1</button></div>
             <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/mapa.pdf';">Tarea 2</button></div>
             <div class="row"><a href="https://padlet.com/antonio_moralesca/9skac4fy96r17vrm"><button class="buttonCenter">Tarea 3</button></a></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_principios.pdf';">Tarea 4</button></div>
-            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_caracteristicas.pdf';">Tarea 5</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_principios.png';">Tarea 4</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuadro_caracteristicas.png';">Tarea 5</button></div>
             <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuestionario.pdf';">Tarea 6</button></div>
           </div>
         </div>
