Third period button changes uglier

--- a/pages/3rd.html
+++ b/pages/3rd.html
@@ -22,11 +22,11 @@
 
         <div class="row justify-content-md-center">
           <div class="col-6">
-            <div class="row"><button class="buttonCenter buttonWidth" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/reflexion.pdf';">Tarea 1</button></div>
+            <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/reflexion.pdf';">Tarea 1</button></div>
             <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/mapa.pdf';">Tarea 2</button></div>
-            <div class="row"><a href="https://padlet.com/antonio_moralesca/9skac4fy96r17vrm"><button class="buttonCenter buttonWidth">Tarea 3</button></a></div>
-            <div class="row"><a href="https://victormnevarezh.github.io/crs/docs/3rd/cuadro_principios.png"><button class="buttonCenter buttonWidth">Tarea 4</button></a></div>
-            <div class="row"><a href="https://victormnevarezh.github.io/crs/docs/3rd/cuadro_caracteristicas.png"><button class="buttonCenter buttonWidth">Tarea 5</button></a></div>
+            <div class="row"><a href="https://padlet.com/antonio_moralesca/9skac4fy96r17vrm"><button class="buttonCenter">Tarea 3</button></a></div>
+            <div class="row"><a href="https://victormnevarezh.github.io/crs/docs/3rd/cuadro_principios.png"><button class="buttonCenter">Tarea 4</button></a></div>
+            <div class="row"><a href="https://victormnevarezh.github.io/crs/docs/3rd/cuadro_caracteristicas.png"><button class="buttonCenter">Tarea 5</button></a></div>
             <div class="row"><button class="buttonCenter" onclick="window.location.href='https://victormnevarezh.github.io/crs/docs/3rd/cuestionario.pdf';">Tarea 6</button></div>
           </div>
         </div>
